--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "@skynexui/components": "^1.23.2",
+    "@supabase/supabase-js": "^1.29.4",
     "next": "^12.0.8",
+    "node-modules": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
